--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,28 +1,19 @@
 @import 'libs/bootstrap-reboot.min';
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Port+Lligat+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Tinos&display=swap');
 
 @import 'base/variables';
 @import 'base/mixins';
 
 * {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Tinos', serif;
     margin: 0;
     padding: 0;
 }
 
+
 .container { 
-    width: 1650px;
+    width: 1110px;
     margin: 0 auto;
 }
 
-@import 'blocks/buttons';
-@import 'blocks/titles';
-@import 'blocks/menu';
-@import 'blocks/promo';
-@import 'blocks/works';
-@import 'blocks/project';
-@import 'blocks/brands';
-@import 'blocks/experience';
-@import 'blocks/contacts';
-@import 'blocks/media'; //всегда последний
+@import 'blocks/header';
