--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,11 +1,12 @@
 @import 'libs/bootstrap-reboot.min';
-@import url('https://fonts.googleapis.com/css2?family=Tinos&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&family=Tinos:wght@400;700&display=swap');
 
 @import 'base/variables';
 @import 'base/mixins';
 
 * {
     font-family: 'Tinos', serif;
+    font-family: 'Open Sans', sans-serif;
     margin: 0;
     padding: 0;
 }
@@ -17,3 +18,5 @@
 }
 
 @import 'blocks/header';
+@import 'blocks/promo';
+@import 'blocks/buttons';
