complete navbar and promo

--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -12,4 +12,7 @@
     text-align: center;
     padding-top: 14px;
     cursor: pointer;
+    &:hover {
+        background-color: $main_color;
+    }
 }
