--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -21,3 +21,6 @@
 @import 'blocks/buttons';
 @import 'blocks/header';
 @import 'blocks/promo';
+@import 'blocks/history';
+@import 'blocks/order';
+@import 'blocks/catalog';
