--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,5 @@
 @import 'libs/bootstrap-reboot.min';
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&family=Tinos:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cookie&family=Open+Sans:wght@300;400;500;600;700&family=Tinos:wght@400;700&display=swap');
 
 @import 'base/variables';
 @import 'base/mixins';
@@ -7,6 +7,7 @@
 * {
     font-family: 'Tinos', serif;
     font-family: 'Open Sans', sans-serif;
+    font-family: 'Cookie', cursive;
     margin: 0;
     padding: 0;
 }
@@ -24,3 +25,6 @@
 @import 'blocks/history';
 @import 'blocks/order';
 @import 'blocks/catalog';
+@import 'blocks/menu';
+@import 'blocks/review';
+@import 'blocks/gallery';
