--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -6,8 +6,9 @@
 
 * {
     font-family: 'Tinos', serif;
-    font-family: 'Open Sans', sans-serif;
     font-family: 'Cookie', cursive;
+    font-family: 'Open Sans', sans-serif;
+    
     margin: 0;
     padding: 0;
 }
@@ -28,3 +29,5 @@
 @import 'blocks/menu';
 @import 'blocks/review';
 @import 'blocks/gallery';
+@import 'blocks/cooks';
+@import 'blocks/footer';
