--- a/src/sass/blocks/_cooks.scss
+++ b/src/sass/blocks/_cooks.scss
@@ -37,9 +37,9 @@
             position: absolute;
             bottom: 0;
             text-align: center;
-            font-family: 'Cookie';
+            font-family: 'Open Sans';
             font-style: normal;
-            font-weight: 400;
+            font-weight: 700;
             font-size: 20px;
             line-height: 20px;
             color: #000000;
@@ -50,8 +50,9 @@
             padding-top: 40px;
             span {
                 color: $main_color;
-                font-family: 'Cookie';
+                font-family: 'Open Sans';
                 text-decoration:underline;
+                font-weight: 700;
             }
         }
     }
