--- a/src/sass/blocks/_cooks.scss
+++ b/src/sass/blocks/_cooks.scss
@@ -37,12 +37,12 @@
             position: absolute;
             bottom: 0;
             text-align: center;
-            font-family: 'Open Sans';
+            font-family: 'Tinos';
             font-style: normal;
             font-weight: 700;
             font-size: 20px;
             line-height: 20px;
-            color: #000000;
+            color: #2C2C2C;
             width: 350px;
             height: 100px;
             background: rgba(255, 255, 255, 0.7);
@@ -50,7 +50,7 @@
             padding-top: 40px;
             span {
                 color: $main_color;
-                font-family: 'Open Sans';
+                font-family: 'Tinos';
                 text-decoration:underline;
                 font-weight: 700;
             }
