--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -1,5 +1,50 @@
 .footer {
+    position: relative;
     min-height: 740px;
     margin-top: 100px;
     background: url('../../img/bg/footer_bg.jpg') center (center / cover) no-repeat;
+    &__social {
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        height: 100px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: rgba(255, 255, 255, 0.3);
+    }
+    &__link {
+        width: 30px;
+        height: 30px;
+        margin-right: 20px;
+        img {
+            object-fit: cover;
+        }
+    }
+    &__address {
+        a {
+            color: #000;
+        }
+        position: absolute;
+        bottom: 35px;
+        left: 30px;
+        font-family: 'Open Sans';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 20px;
+        color: #000;
+        z-index: 10;
+    }
+    &__card {
+        display: flex;
+        justify-content: space-between;
+    }
+    &__wine {
+        padding-top: 60px;
+        width: 395px;
+        height: 582px;
+        object-fit: cover;
+    }
 }
