--- a/src/sass/blocks/_review.scss
+++ b/src/sass/blocks/_review.scss
@@ -1,56 +1,37 @@
 .review {
-   
+    background: #E6E5E5;
     min-height: 550px;
     padding: 100px 260px 0;
     &__inner {
         position: relative;
+        text-align: center;
+        margin: 0 auto;
     }
-    .prev, .next {
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        left: -66px;
-        border: none;
-        background-color: #fff;
-        img {
-            width: 31px;
-            height: 50px;
-        }
-    }
-    .next {
-        right: -66px;
-        left: auto;
-    }
-    .tns-item {
-        img {
-            display: block;
-            margin: 0 auto;
-        }
-    }
-    .tns-nav {
+    &__item {
         display: flex;
+        flex-direction: column;
         justify-content: center;
-        background-color: #fff;
-        margin: 0 -3px;
-        margin-bottom: 15px;
-        button {
-            background-color: #D3D3D3;
-            margin: 0 3px;
-            width: 30px;
-            height: 30px;
-            border-radius: 100%;
-            border-color: #D3D3D3;
-            border: none;
-            &:hover {
-                box-shadow: 1px 1px 10px #D3D3D3;
-            }
-        }
-        .tns-nav-active {
-            border-color: $main_color;
-            background-color: $main_color;
-            &:hover {
-                box-shadow: 1px 1px 10px $main_color;
-            }            
+        img {
+            width: 100px;
+            height: 100px;
         }
     }
+    &__descr {
+        width: 920px;
+        font-family: 'Open Sans';
+        font-style: italic;
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 27px;
+        text-align: center;
+        color: #000000;
+    }
+    &__photo {
+       
+        border-radius: 100%;
+        padding-top: 30px;
+        
+    }
+    
+    
 }
